# flightsim-2d

./: .gitignore  CREDITS.md  Cargo.toml  README.md  deploy.sh  pre-commit  rustfmt.toml
crates/app/: Cargo.toml  Trunk.toml  index.html
crates/app/src/: app.rs  lib.rs  main.rs  prelude.rs  profiler.rs  scope.rs
crates/app/src/ai/: mod.rs  net.rs
crates/app/src/app/: commands.rs
crates/app/src/cells/: cell_arena.rs  cell_map.rs  cell_vec.rs  clone_cell.rs  cow_cell.rs  id.rs  lazy_cell.rs  mod.rs  mut_cell.rs
crates/app/src/core_game/: commands.rs  crablet.rs  drawing.rs  game_state.rs  handle_input.rs  inputs.rs  mod.rs  physics.rs  plane.rs  plankton.rs  plotter.rs  rigid_body.rs  settings.rs  stats.rs  tile.rs  tilemap.rs  timer.rs  vec2d.rs  winglet.rs
crates/app/src/renderer/: camera.rs  color.rs  egui_canvas.rs  framebuffer.rs  index_buffer.rs  meshbuffer.rs  mipmap.rs  mod.rs  primitives.rs  quad_instance_data.rs  renderer.rs  scenegraph.rs  sprite.rs  storage_buffer.rs  terrain_vertex.rs  texture.rs  texture_opts.rs  uniform_buffer.rs  uniform_data.rs
crates/app/src/renderer/shaders/: copy_framebuffer.wgsl  mod.rs  quads.wgsl  shader_pack.rs  terrain.wgsl
crates/app/src/util/: bounds.rs  mod.rs
crates/core_util/: Cargo.toml
crates/core_util/src/: collect_grouped.rs  inspect_err.rs  lib.rs  replace_with.rs  saturating_add_assign.rs  with.rs
crates/egui_inspect/: Cargo.toml
crates/egui_inspect/src/: base_type_inspect.rs  lib.rs
crates/egui_inspect_derive/: Cargo.toml
crates/egui_inspect_derive/src/: internal_paths.rs  lib.rs  utils.rs
crates/matrix/: Cargo.toml
crates/matrix/src/: dynamic.rs  inspect.rs  lib.rs  transforms.rs
crates/proc_macros/: Cargo.toml
crates/proc_macros/src/: lib.rs
crates/proc_macros_impl/: Cargo.toml
crates/proc_macros_impl/src/: lib.rs
crates/sys_io/: Cargo.toml
crates/sys_io/src/: lib.rs
crates/vector/: Cargo.toml
crates/vector/src/: dynamic.rs  inspect.rs  lib.rs
