[package]
name = "matrix"
version = "1.0.0"
authors = ["Arne Vansteenkiste <barnex@gmail.com>"]
edition = "2021"

[dependencies]
bytemuck = { workspace = true, features = ["min_const_generics"] }
egui_inspect = { path = "../egui_inspect" }
egui = { workspace = true }
serde = { worspace = true, features = ["derive"] }
vector = { path = "../vector" }
