[package]
name = "proc_macros"
version = "1.0.0"
edition = "2021"


[lib]
proc-macro = true

[dependencies]
proc_macros_impl = { path = "../proc_macros_impl" }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = [
	"full",
	"proc-macro",
	"derive",
	"parsing",
] }
#darling = "0.14"

# egui only
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "*", features = ["js", "js-sys"] }
