[package]
name = "vector"
version = "2.0.0"
authors = ["Arne Vansteenkiste <barnex@gmail.com>"]
edition = "2021"

[dependencies]
bytemuck = { workspace = true, features = ["min_const_generics"] }
egui = { workspace = true }
egui_inspect = { path = "../egui_inspect" }
num-traits = { workspace = true }
serde = { workspace = true, features = ["derive"] }
